# natural-iac

./: .gitignore  CLAUDE.md  README.md  demo.py  pyproject.toml
.niac/: conventions.yaml
examples/: saas_api.contract.yaml
natural_iac/: cli.py
natural_iac/contract/: __init__.py  schema.py  serializer.py  validator.py
natural_iac/conventions/: __init__.py  module_reader.py  schema.py
natural_iac/execution/: __init__.py  backends.py  state.py
natural_iac/execution/terraform/: __init__.py  backend.py  renderer.py
natural_iac/intent/: __init__.py  agent.py  prompts.py
natural_iac/planner/: __init__.py  agent.py  cost.py  prompts.py  schema.py
tests/: test_contract.py  test_conventions.py  test_execution.py  test_intent_agent.py  test_planner.py
