[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "natural-iac"
version = "0.1.0"
description = "Intent-based infrastructure as code powered by natural language"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",        # CLI output
    "typer>=0.12",       # CLI interface
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
niac = "natural_iac.cli:app"
